Added a test method. Added ability to change report name. Added jvm arg to disable illegal reflective access warning.